# CS132

Project 1/: clothes.txt  dance.txt  lib132.cpp  lib132.h  madlibs.cpp  mymadlib.txt  mymadlib2.txt  out.txt  out2.txt  tarzan.txt  university.txt
Project 2/tiles/: CMakeLists.txt
Project 2/tiles/src/: Tile.cpp  Tile.h  TileMain.cpp  TileManager.cpp  TileManager.h  lib132.cpp  lib132.h
Project 3/letterInventory/: CMakeLists.txt  LetterInventory.cpp  LetterInventory.h  inventoryMain.cpp  lib132.cpp  lib132.h
Project 4/anagrams/: AnagramSolver.cpp  AnagramSolver.h  CMakeLists.txt  LetterInventory.cpp  LetterInventory.h  anagramMain.cpp
Project 5/critters/src/: Ant.cpp  Ant.h  Bird.cpp  Bird.h  Bumblebee.cpp  Bumblebee.h  Butterfly.cpp  Butterfly.h  Cat.cpp  Cat.h  Critter.cpp  Critter.h  CritterBase.cpp  CritterBase.h  Dragonfly.cpp  Dragonfly.h  Hippo.cpp  Hippo.h  Nursery.cpp  Nursery.h  Stone.cpp  Stone.h  Vulture.cpp  Vulture.h  crittertypes.cpp  crittertypes.h
Project 5/simplified/: CritterGui.cpp  CritterGui.h  CritterModel.cpp  CritterModel.h  main.cpp
Project 6/game-of-life/build-sgl-project-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.sgl-project.Debug  object_script.sgl-project.Release
Project Final/WildFireSim/: CMakeLists.txt  Doxyfile  WildFireSim.pro  asdf.txt  description.txt  fdsa.txt  starter.txt  starter2.txt  starter_small.txt
Project Final/WildFireSim/src/: Burning.cpp  Burning.h  Burnt.cpp  Burnt.h  Countermeasure.cpp  Countermeasure.h  Fire.cpp  Fire.h  FireBreak.cpp  FireBreak.h  (+25 more)
(+455 files in other folders)
